--- a/index.html
+++ b/index.html
@@ -34,7 +34,286 @@
 	<div class="site-content">
 
 
-		
+		<!--=========================-->
+		<!--=        Header         =-->
+		<!--=========================-->
+
+
+
+		<!-- Top Bar area start
+	============================================= -->
+
+
+	<header id="header" class="header-area">
+		<div class="top-bar">
+			<div class="container-fluid custom-container">
+				<div class="row">
+					<div class="col-lg-6">
+						<div class="top-bar-left">
+							<p><i class="far fa-envelope"></i><a href="mailto:streetstyle@info.com">streetstyle@info.com</a></p>
+						</div>
+					</div>
+					<!-- Col -->
+					<div class="col-lg-6">
+						<div class="top-bar-right">
+							<div class="social">
+								<ul>
+									<li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
+									<li><a href="#"><i class="fab fa-twitter"></i></a></li>
+									<li><a href="#"><i class="fab fa-instagram"></i></a></li>
+								</ul>
+							</div>
+							<a href="login.html" class="my-account">Мій акаунт</a>
+						</div>
+						<!--top-bar-right end-->
+					</div>
+					<!-- Col end-->
+				</div>
+				<!--Row end-->
+			</div>
+			<!--container end-->
+		</div>
+		<!--top-bar end-->
+
+		<!-- Main Menu
+	============================================= -->
+
+
+		<div class="container-fluid custom-container menu-rel-container">
+			<div class="row">
+				<!-- Logo
+			============================================= -->
+				<div class="col-lg-6 col-xl-3">
+					<div class="logo">
+						<a href="index.html">
+						<img src="media/images/logo.png" alt="">
+					</a>
+					</div>
+				</div>
+				<!--Col end-->
+
+				<!-- Main menu
+				============================================= -->
+
+				<div class="col-lg-12 col-xl-7 order-lg-3 order-xl-2 menu-container">
+					<div class="mainmenu">
+						<ul id="navigation">
+							<li><a href="index.html">ГОЛОВНА</a></li>
+							<li><a href="shop.html">КАТАЛОГ</a></li>
+							<li class="has-child"><a href="index.html">Жінкам</a>
+								<div class="mega-menu">
+									<div class="mega-catagory per-20">
+										<h4><a class="font-red" href="shop.html">Жінкам</a></h4>
+										<ul class="mega-button">
+											<li><a href="shop.html">Одяг</a></li>
+											<li><a href="shop.html">Взуття</a></li>
+											<li><a href="shop.html">Аксесуари</a></li>
+										</ul>
+									</div>
+									<div class="mega-catagory per-20">
+										<h4><a class="font-red" href="single.html">Літо 2023: жіноча мода</a></h4>
+										<ul class="mega-button">
+											<li><a href="single.html">10 образів на літо</a></li>
+											<li><a href="single.html">Як поєднувати сукню та взуття</a></li>
+											<li><a href="single.html">Аксесуари на літо</a></li>
+											<li><a href="single.html">Як вдягтися зручно та гарно</a></li>
+										</ul>
+									</div>
+									<div class="mega-catagory mega-img per-30">
+										<a href="#"><img src="media/images/banner/mmb1.jpg" alt=""></a>
+									</div>
+									<div class="mega-catagory mega-img per-30">
+										<a href="#"><img src="media/images/banner/mmb2.jpg" alt=""></a>
+									</div>
+								</div>
+							</li>
+							<li class="has-child"><a href="index.html">Чоловікам</a>
+								<div class="mega-menu five-col">
+									<div class="mega-product">
+										<h4><a class="font-red" href="shop.html">Чоловікам</a></h4>
+										<ul class="mega-button">
+											<li><a href="shop.html">Чоловічий одяг</a></li>
+											<li><a href="shop.html">Взуття</a></li>
+											<li><a href="shop.html">Аксесуари</a></li>
+										</ul>
+									</div>
+									<div class="mega-catagory per-20">
+										<h4><a class="font-red" href="single.html">Літо 2023: чоловіча мода</a></h4>
+										<ul class="mega-button">
+											<li><a href="single.html">10 образів на літо</a></li>
+											<li><a href="single.html">Стильне літо</a></li>
+											<li><a href="single.html">Аксесуари на щодень</a></li>
+										</ul>
+									</div>
+									<div class="mega-product">
+										<div class="sin-product">
+											<div class="pro-img">
+												<img src="media/images/product/11.jpg" alt="">
+											</div>
+											<div class="mid-wrapper">
+												<h5 class="pro-title"><a href="product.html">Чіноси</a></h5>
+												<span>900 ₴</span>
+											</div>
+										</div>
+									</div>
+									<div class="mega-product">
+										<div class="sin-product">
+											<div class="pro-img">
+												<img src="media/images/product/12.jpg" alt="">
+											</div>
+											<div class="mid-wrapper">
+												<h5 class="pro-title"><a href="product.html">Сонцезахисні окуляри</a></h5>
+												<span>450 ₴</span>
+											</div>
+										</div>
+									</div>
+									<div class="mega-product">
+										<div class="sin-product">
+											<div class="pro-img">
+												<img src="media/images/product/13.jpg" alt="">
+											</div>
+											<div class="mid-wrapper">
+												<h5 class="pro-title"><a href="product.html">Футблока поло</a></h5>
+												<span>700 ₴</span>
+											</div>
+										</div>
+									</div>
+								</div>
+							</li>
+							<li><a href="cart.html">Кошик</a></li>
+							<li><a href="blog.html">Блог</a></li>
+							<li><a href="contact.html">Контакти</a></li>
+						</ul>
+					</div>
+				</div>
+				<!--Main menu end-->
+
+
+				<div class="col-lg-6 col-xl-2 order-lg-2 order-xl-3">
+					<div class="header-right-menu">
+						<ul>
+							<li class="top-search style-two"><a href="javascript:void(0)"><i class="flaticon-magnifying-glass"></i></a>
+								<input type="text" class="search-input" placeholder="Пошук">
+							</li>
+							<li><a href="#"><i class="flaticon-like"></i></a></li>
+							<li class="top-cart"><a href="javascript:void(0)"><i class="flaticon-bag"></i><span>2</span></a>
+
+								<div class="cart-drop">
+									<div class="single-cart">
+										<div class="cart-img">
+											<img alt="" src="media/images/product/car1.jpg">
+										</div>
+										<div class="cart-title">
+											<p><a href="">Футболка Київ</a></p>
+										</div>
+										<div class="cart-price">
+											<p>1 x 500 ₴</p>
+										</div>
+										<a href="#"><i class="fa fa-times"></i></a>
+									</div>
+									<div class="single-cart">
+										<div class="cart-img">
+											<img alt="" src="media/images/product/car2.jpg">
+										</div>
+										<div class="cart-title">
+											<p><a href="">Годинник Вічність</a></p>
+										</div>
+										<div class="cart-price">
+											<p>1 x 300 ₴</p>
+										</div>
+										<a href="#"><i class="fa fa-times"></i></a>
+									</div>
+									<div class="cart-bottom">
+										<div class="cart-sub-total">
+											<p>Сума <span>800 ₴</span></p>
+										</div>
+										<div class="cart-checkout">
+											<a href="cart.html"><i class="fa fa-shopping-cart"></i>Відкрити кошик</a>
+										</div>
+									</div>
+								</div>
+							</li>
+						</ul>
+					</div>
+				</div>
+				<!--Col end-->
+			</div>
+			<!--Row end-->
+		</div>
+		<!--container end-->
+	</header>
+	<!--Header end-->
+
+
+
+	<!--=========================-->
+	<!--=        Mobile Header         =-->
+	<!--=========================-->
+
+
+
+	<header class="mobile-header">
+		<div class="container-fluid custom-container">
+			<div class="row">
+
+				<!-- Mobile menu Opener
+				============================================= -->
+				<div class="col-4">
+					<div class="accordion-wrapper">
+						<a href="#" class="mobile-open"><i class="flaticon-menu-1"></i></a>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="logo">
+						<a href="index.html">
+							<img src="media/images/logo.png" alt="">
+						</a>
+					</div>
+				</div>
+				<div class="col-4">
+					<div class="top-cart">
+						<a href="javascript:void(0)"><i class="fa fa-shopping-cart" aria-hidden="true"></i> (2)</a>
+						<div class="cart-drop">
+							<div class="single-cart">
+								<div class="cart-img">
+									<img alt="" src="media/images/product/car1.jpg">
+								</div>
+								<div class="cart-title">
+									<p><a href="">Футболка Київ</a></p>
+								</div>
+								<div class="cart-price">
+									<p>1 x 500 ₴</p>
+								</div>
+								<a href="#"><i class="fa fa-times"></i></a>
+							</div>
+							<div class="single-cart">
+								<div class="cart-img">
+									<img alt="" src="media/images/product/car2.jpg">
+								</div>
+								<div class="cart-title">
+									<p><a href="">Годинник Вічність</a></p>
+								</div>
+								<div class="cart-price">
+									<p>1 x 300 ₴</p>
+								</div>
+								<a href="#"><i class="fa fa-times"></i></a>
+							</div>
+							<div class="cart-bottom">
+								<div class="cart-sub-total">
+									<p>Сума <span>800 ₴</span></p>
+								</div>
+								<div class="cart-checkout">
+									<a href="cart.html"><i class="fa fa-shopping-cart"></i>Відкрити кошик</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<!-- /.row end -->
+		</div>
+		<!-- /.container end -->
+	</header>
 		
 		<!--=========================-->
 		<!--=        Slider         =-->
