--- a/index.html
+++ b/index.html
@@ -218,73 +218,125 @@
 
 
 	<!--=========================-->
-	<!--=        Mobile Header         =-->
-	<!--=========================-->
+		<!--=        Mobile Header         =-->
+		<!--=========================-->
 
 
 
-	<header class="mobile-header">
-		<div class="container-fluid custom-container">
-			<div class="row">
+		<header class="mobile-header">
+			<div class="container-fluid custom-container">
+				<div class="row">
 
-				<!-- Mobile menu Opener
-				============================================= -->
-				<div class="col-4">
-					<div class="accordion-wrapper">
-						<a href="#" class="mobile-open"><i class="flaticon-menu-1"></i></a>
+					<!-- Mobile menu Opener
+					============================================= -->
+					<div class="col-4">
+						<div class="accordion-wrapper">
+							<a href="#" class="mobile-open"><i class="flaticon-menu-1"></i></a>
+						</div>
 					</div>
-				</div>
-				<div class="col-4">
-					<div class="logo">
-						<a href="index.html">
-							<img src="media/images/logo.png" alt="">
-						</a>
+					<div class="col-4">
+						<div class="logo">
+							<a href="index.html">
+								<img src="media/images/logo.png" alt="">
+							</a>
+						</div>
 					</div>
-				</div>
-				<div class="col-4">
-					<div class="top-cart">
-						<a href="javascript:void(0)"><i class="fa fa-shopping-cart" aria-hidden="true"></i> (2)</a>
-						<div class="cart-drop">
-							<div class="single-cart">
-								<div class="cart-img">
-									<img alt="" src="media/images/product/car1.jpg">
+					<div class="col-4">
+						<div class="top-cart">
+							<a href="javascript:void(0)"><i class="fa fa-shopping-cart" aria-hidden="true"></i> (2)</a>
+							<div class="cart-drop">
+								<div class="single-cart">
+									<div class="cart-img">
+										<img alt="" src="media/images/product/car1.jpg">
+									</div>
+									<div class="cart-title">
+										<p><a href="">Футболка Київ</a></p>
+									</div>
+									<div class="cart-price">
+										<p>1 x 500 ₴</p>
+									</div>
+									<a href="#"><i class="fa fa-times"></i></a>
 								</div>
-								<div class="cart-title">
-									<p><a href="">Футболка Київ</a></p>
+								<div class="single-cart">
+									<div class="cart-img">
+										<img alt="" src="media/images/product/car2.jpg">
+									</div>
+									<div class="cart-title">
+										<p><a href="">Годинник Вічність</a></p>
+									</div>
+									<div class="cart-price">
+										<p>1 x 300 ₴</p>
+									</div>
+									<a href="#"><i class="fa fa-times"></i></a>
 								</div>
-								<div class="cart-price">
-									<p>1 x 500 ₴</p>
-								</div>
-								<a href="#"><i class="fa fa-times"></i></a>
-							</div>
-							<div class="single-cart">
-								<div class="cart-img">
-									<img alt="" src="media/images/product/car2.jpg">
-								</div>
-								<div class="cart-title">
-									<p><a href="">Годинник Вічність</a></p>
-								</div>
-								<div class="cart-price">
-									<p>1 x 300 ₴</p>
-								</div>
-								<a href="#"><i class="fa fa-times"></i></a>
-							</div>
-							<div class="cart-bottom">
-								<div class="cart-sub-total">
-									<p>Сума <span>800 ₴</span></p>
-								</div>
-								<div class="cart-checkout">
-									<a href="cart.html"><i class="fa fa-shopping-cart"></i>Відкрити кошик</a>
+								<div class="cart-bottom">
+									<div class="cart-sub-total">
+										<p>Сума <span>800 ₴</span></p>
+									</div>
+									<div class="cart-checkout">
+										<a href="cart.html"><i class="fa fa-shopping-cart"></i>Відкрити кошик</a>
+									</div>
 								</div>
 							</div>
 						</div>
 					</div>
 				</div>
+				<!-- /.row end -->
 			</div>
-			<!-- /.row end -->
+			<!-- /.container end -->
+		</header>
+
+		<div class="accordion-wrapper">
+
+			<!-- Mobile Menu Navigation
+				============================================= -->
+			<div id="mobilemenu" class="accordion">
+				<ul>
+					<li class="mob-logo"><a href="index.html">
+							<img src="media/images/logo.png" alt="">
+						</a></li>
+					<li><a href="#" class="closeme"><i class="flaticon-close"></i></a></li>
+					<li class="out-link"><a href="index.html">ГОЛОВНА</a></li>
+					<li>
+						<a href="shop.html" class="link">Каталог</a>
+					</li>
+					<li>
+						<a href="shop.html" class="link">Жінкам<i class="fa fa-chevron-down"></i></a>
+						<ul class="submenu">
+							<li><a href="shop.html">Одяг</a></li>
+							<li><a href="shop.html">Взуття</a></li>
+							<li><a href="shop.html">Аксесуари</a></li>
+						</ul>
+					</li>
+
+					<li>
+						<a href="#" class="link">Чоловікам<i class="fa fa-chevron-down"></i></a>
+						<ul class="submenu">
+							<li><a href="shop.html">Чоловічий одяг</a></li>
+							<li><a href="shop.html">Взуття</a></li>
+							<li><a href="shop.html">Аксесуари</a></li>
+						</ul>
+					</li>
+					<li class="out-link"><a href="shop.html">Кошик</a></li>
+					<li>
+						<a href="#" class="link">Блог<i class="fa fa-chevron-down"></i></a>
+						<ul class="submenu">
+							<li><a href="single.html">10 образів на літо</a></li>
+							<li><a href="single.html">Аксесуари на літо</a></li>
+						</ul>
+					</li>
+					<li class="out-link"><a href="account.html">Мій акаунт</a></li>
+				</ul>
+				<div class="mobile-login">
+					<a href="login.html">Увійти</a> |
+					<a href="create-account.html">Створити акаунт</a>
+				</div>
+				<form action="#" id="moble-search">
+					<input placeholder="Пошук...." type="text">
+					<button type="submit"><i class="fa fa-search"></i></button>
+				</form>
+			</div>
 		</div>
-		<!-- /.container end -->
-	</header>
 		
 		<!--=========================-->
 		<!--=        Slider         =-->
