--- a/cart.html
+++ b/cart.html
@@ -64,6 +64,7 @@
 								</ul>
 							</div>
 							<a href="login.html" class="my-account">Мій акаунт</a>
+							<a href="account.html" class="my-account">Мої замовлення</a>
 						</div>
 						<!--top-bar-right end-->
 					</div>
